Added typescript info to template, modified readme

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -10,3 +10,18 @@
 @import "general";
 @import "layout";
 @import "module";
+
+.main {
+  height: 100%;
+  .jumbotron {
+    background: white;
+    margin-top: 0;
+    .container {
+      max-width: 40rem;
+      .jumbotron-heading {
+        font-weight: 300;
+      }
+    }
+  }
+}
+
