--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -10364,3 +10364,20 @@ a.text-dark:hover, a.text-dark:focus {
     border-color: #dee2e6;
   }
 }
+
+.main {
+  height: 100%;
+}
+
+.main .jumbotron {
+  background: white;
+  margin-top: 0;
+}
+
+.main .jumbotron .container {
+  max-width: 40rem;
+}
+
+.main .jumbotron .container .jumbotron-heading {
+  font-weight: 300;
+}
