Updated markup and styles

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -10371,7 +10371,7 @@ a.text-dark:hover, a.text-dark:focus {
 
 .main .jumbotron {
   background: white;
-  margin-top: 0;
+  padding: 5rem 0;
 }
 
 .main .jumbotron .container {
