--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -15,7 +15,7 @@
   height: 100%;
   .jumbotron {
     background: white;
-    margin-top: 0;
+    padding: 5rem 0;
     .container {
       max-width: 40rem;
       .jumbotron-heading {
